--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cinematronix</title>
+    <title>Character Library</title>
     <%= csrf_meta_tags %>
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Merriweather&display=swap" rel="stylesheet">
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= stylesheet_pack_tag 'application'%>
     <%= javascript_pack_tag 'application' %>
   </head>
 
